--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -8,7 +8,7 @@
 <% end %>
 
 <%= link_to "Add a dose", new_cocktail_dose_path(@cocktail) %> ||
-<%= link_to "To Cocktails Menu", cocktails_path %>
+<%= link_to "To Cocktails Menu", root_path %>
 
 
 
