--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -9,6 +9,7 @@
     <div class="col-4">
       <ul>
         <% @cocktails.each do |cocktail| %>
+          <%= cl_image_tag cocktail.photo.key, height: 300, width: 400, crop: :fill %>
           <li><%= link_to "#{cocktail.name}", cocktail_path(cocktail) %></li>
         <% end %>
       </ul>
