--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -7,12 +7,13 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-4">
-      <ul>
-        <% @cocktails.each do |cocktail| %>
-          <%= cl_image_tag cocktail.photo.key, height: 300, width: 400, crop: :fill %>
-          <li><%= link_to "#{cocktail.name}", cocktail_path(cocktail) %></li>
-        <% end %>
-      </ul>
+      <% @cocktails.each do |cocktail| %>
+        <div class="card-product">
+          <%= cl_image_tag cocktail.photo.key %>
+          <div class="card-product-infos">
+          <h2><%= link_to "#{cocktail.name}", cocktail_path(cocktail) %></h2>
+        </div>
+      <% end %>
     </div>
   </div>
   <div class="row justify-content-center">
