--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,5 @@
 <h1>Cocktail <%= @cocktail.name.upcase %></h1>
+<%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill %>
 <% @cocktail.doses.each do |dose| %>
 <p> <%=  "#{dose.ingredient.name} - #{dose.description}" %> </p>
   <p><%= link_to "Delete",
