--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -9,7 +9,11 @@
 <% end %>
 
 <%= link_to "Add a dose", new_cocktail_dose_path(@cocktail) %> ||
-<%= link_to "To Cocktails Menu", root_path %>
+<%= link_to "To Cocktails Menu", root_path %> ||
+<%= link_to "Delete Cocktail",
+              root_path,
+              method: :delete,
+              data: { confirm: "Are you sure?" }  %>
 
 
 
