mister cocktail current

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,9 @@
 // Specific CSS for your home-page
+body {
+  background-color: #185d56;
+  font-family: 'Roboto Mono', monospace;
+}
+
+h1, h2, h4 {
+  font-family: 'Roboto Mono', monospace;
+}
