--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,19 +1,24 @@
 <h1>Cocktail <%= @cocktail.name.upcase %></h1>
-<%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill %>
-<% @cocktail.doses.each do |dose| %>
-<p> <%=  "#{dose.ingredient.name} - #{dose.description}" %> </p>
-  <p><%= link_to "Delete",
-              dose_path(dose),
-              method: :delete,
-              data: { confirm: "Are you sure?" } %></p>
-<% end %>
-
-<%= link_to "Add a dose", new_cocktail_dose_path(@cocktail) %> ||
-<%= link_to "To Cocktails Menu", root_path %> ||
-<%= link_to "Delete Cocktail",
-              cocktail_path(@cocktail),
-              method: :delete,
-              data: { confirm: "Are you sure?" }  %>
+<div class="container">
+  <div class="d-inline-flex">
+    <%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill %>
+    <div class="ingredients">
+      <% @cocktail.doses.each do |dose| %>
+      <p> <%=  "#{dose.ingredient.name} - #{dose.description}" %> </p>
+        <p><%= link_to "Delete",
+                    dose_path(dose),
+                    method: :delete,
+                    data: { confirm: "Are you sure?" } %></p>
+      <% end %>
+    </div>
+      <%= link_to "Add a dose", new_cocktail_dose_path(@cocktail) %> ||
+      <%= link_to "To Cocktails Menu", root_path %> ||
+      <%= link_to "Delete Cocktail",
+                    cocktail_path(@cocktail),
+                    method: :delete,
+                    data: { confirm: "Are you sure?" }  %>
+  </div>
+</div>
 
 
 
