--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,23 +1,20 @@
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1560963689-b5682b6440f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1586&q=80);">
-  <div class="container">
-    <h1>Cocktails Menu</h1>
+  <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+    <a class="navbar-brand" href="cocktails/new">
+      <i class="fas fa-cocktail">Create your cocktail</i>
+    </a>
   </div>
-</div>
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-4">
-      <% @cocktails.each do |cocktail| %>
-        <div class="card-product">
-          <%= cl_image_tag cocktail.photo.key %>
-          <div class="card-product-infos">
-          <h2><%= link_to "#{cocktail.name}", cocktail_path(cocktail) %></h2>
-        </div>
-      <% end %>
+  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1560963689-b5682b6440f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1586&q=80);">
+    <div class="container">
+      <h1>Cocktails Menu</h1>
     </div>
   </div>
-  <div class="row justify-content-center">
-    <%= link_to "Create you own cocktail", new_cocktail_path, class:"btn btn-primary" %>
+  <div class="container p-2">
+    <div class="row d-flex justify-content-around">
+        <% @cocktails.each do |cocktail| %>
+          <div class="card-category col-4 m-2" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo.key %>')">
+            <h2><%= link_to "#{cocktail.name}", cocktail_path(cocktail) %></h2>
+          </div>
+        <% end %>
+    </div>
   </div>
-</div>
-
